v1.15/_sources/language_reference/_generated/warp.mesh_query_aabb_next_tiled.rst.txt
warp.mesh\_query\_aabb\_next\_tiled
===================================

.. function:: warp._src.lang.mesh_query_aabb_next_tiled(query: MeshQueryAABBTiled) -> Tile[int32, tuple[int]]

   .. hlist::
      :columns: 8

      * Kernel

   Move to the next triangle in a thread-block parallel mesh AABB query and return results as a tile.
   
   Each thread in the block receives one result index in the returned tile, or -1 if no result for that thread.
   The function returns a register tile of shape ``(block_dim,)`` containing the result indices.
   
   To check if any results were found, check if any element in the tile is >= 0.
   
   :param query: The thread-block mesh query object
   
   :returns:
   
             A register tile of shape ``(block_dim,)`` with dtype int, where each element contains
                 the result index for that thread (-1 if no result)
   